--- a/views/profile/index.handlebars
+++ b/views/profile/index.handlebars
@@ -33,6 +33,10 @@
       </p>
       {{/if}}
 
+      <p>Rating:
+        {{rating}}
+      </p>
+
       {{#if owner}}
         <div class="update-post">
           <a class="btn btn-default" href="/profile/edit">Update profile </a>
