--- a/views/sign-up/index.handlebars
+++ b/views/sign-up/index.handlebars
@@ -101,7 +101,7 @@ function checkEmail(){
                <div class="row">
                   <div class="input-field col s12">
                      <input id="email" name="email" type="email" class="validate" required>
-                     <label for="email">Your password</label>
+                     <label for="email">Your E-mail</label>
                   </div>
                </div>
                <div class="step-actions">
