developer can now review customer

--- a/views/posts/new-post/index.handlebars
+++ b/views/posts/new-post/index.handlebars
@@ -18,14 +18,14 @@
         <div class="row control-group">
           <div class="form-group col-xs-12 floating-label-form-group controls">
             <label>Title</label>
-            <input type="text" class="form-control" placeholder="Title" name="title" required data-validation-required-message="Please enter a title.">
+            <input type="text" class="form-control" placeholder="Title" name="title" value="Google DayDream" required data-validation-required-message="Please enter a title.">
             <p class="help-block text-danger"></p>
           </div>
         </div>
         <div class="row control-group">
           <div class="form-group col-xs-12 floating-label-form-group controls">
             <label>Description and Project Requirements and Specifications.</label>
-            <input type="text" class="form-control" placeholder="Description" name="body" required data-validation-required-message="Please enter a body.">
+            <input type="text" class="form-control" placeholder="Description" name="body" value="VR"required data-validation-required-message="Please enter a body.">
             <p class="help-block text-danger"></p>
           </div>
         </div>
@@ -36,14 +36,14 @@
         <div class="row control-group">
           <div class="form-group col-xs-6 floating-label-form-group controls">
             <label>Biding Deadline</label>
-            <input type="datetime-local" class="form-control" id="datefield" name="bidingDeadline"  required data-validation-required-message="Please enter a date and time.">
+            <input type="datetime-local" class="form-control" id="datefield" name="bidingDeadline" value="-05:00"  required data-validation-required-message="Please enter a date and time.">
             <p class="help-block text-danger"></p>
           </div>
         </div>
         <div class="row control-group">
           <div class="form-group col-xs-6 floating-label-form-group controls">
             <label>Completion Deadline</label>
-            <input type="datetime-local" class="form-control" id="datefield"name="completionDeadline" required data-validation-required-message="Please enter a date and time.">
+            <input type="datetime-local" class="form-control" id="datefield"name="completionDeadline" required value="-05:00" data-validation-required-message="Please enter a date and time.">
             <p class="help-block text-danger"></p>
           </div>
         </div>
