--- a/views/posts/single/index.handlebars
+++ b/views/posts/single/index.handlebars
@@ -31,7 +31,7 @@
           {{#if DeveloperMadeReview}}
           {{else}}
             <div class="create-post">
-              <a class="btn btn-default" href="/posts/{{user.username}}/{{post.slug}}/reviewCustomer/{{user.username}}/review">Review Customer </a>
+              <a class="btn btn-default" href="/posts/{{user.username}}/{{post.slug}}/reviewCustomer/{{winnersName}}/review">Review Customer </a>
             </div>
           {{/if}}
         {{/if}}
