--- a/views/posts/review/create-review/index.handlebars
+++ b/views/posts/review/create-review/index.handlebars
@@ -18,35 +18,72 @@
       <img src="/profile_pics/{{userBeingReviewed.profile.profileImage}}" class="img-rounded" alt="" style="width:200px">
     </div>
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-      {{#if workOrder.CustomerReviewPending}}
-        <form name="create-review" action="/posts/{{poster}}/{{slug}}/reviewWinner/{{userBeingReviewed.username}}/review" method="post">
+      {{winnersName}}
+      {{#if customer}}
+        {{#if workOrder.CustomerReviewPending}}
+          <form name="create-review" action="/posts/{{poster}}/{{slug}}/reviewWinner/{{winnersName}}/review" method="post">
 
-          <div class="row control-group">
-            <div class="form-group col-xs-12 floating-label-form-group controls">
-              <label>Rating</label>
-              <input type="number" class="form-control" min="1" step="0.1" max="5" placeholder="5" name = "rating" required />
-              <p class="help-block text-danger"></p>
+            <div class="row control-group">
+              <div class="form-group col-xs-12 floating-label-form-group controls">
+                <label>Rating</label>
+                <input type="number" class="form-control" min="1" step="0.1" max="5" placeholder="5" name = "rating" required />
+                <p class="help-block text-danger"></p>
+              </div>
             </div>
-          </div>
 
-          <div class="row control-group">
-            <div class="form-group col-xs-12 floating-label-form-group controls">
-              <label>Comment</label>
-              <input type="text" class="form-control" placeholder="Please provide a reason for the low rating" name = "comment" required />
-              <p class="help-block text-danger"></p>
+            <div class="row control-group">
+              <div class="form-group col-xs-12 floating-label-form-group controls">
+                <label>Comment</label>
+                <input type="text" class="form-control" placeholder="Please provide a reason for the low rating" name = "comment" required />
+                <p class="help-block text-danger"></p>
+              </div>
             </div>
-          </div>
 
-          <input type="hidden" name="username" value="{{poster}}"/>
-          <input type="hidden" name="slug" value="{{slug}}"/>
+            <input type="hidden" name="username" value="{{poster}}"/>
+            <input type="hidden" name="slug" value="{{slug}}"/>
 
-          <br>
-          <div class="row">
-            <div class="form-group col-xs-12">
-                <button type="submit" class="btn btn-default">Submit</button>
+            <br>
+            <div class="row">
+              <div class="form-group col-xs-12">
+                  <button type="submit" class="btn btn-default">Submit</button>
+              </div>
             </div>
-          </div>
-        </form>
+          </form>
+        {{/if}}
+      {{/if}}
+
+      {{#if developer}}
+        {{#if workOrder.DeveloperMadeReview}}
+        {{else}}
+          <form name="create-review" action="/posts/{{poster}}/{{slug}}/reviewCustomer/{{winnersName}}/review" method="post">
+
+            <div class="row control-group">
+              <div class="form-group col-xs-12 floating-label-form-group controls">
+                <label>Rating</label>
+                <input type="number" class="form-control" min="1" step="0.1" max="5" placeholder="5" name = "rating" required />
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+
+            <div class="row control-group">
+              <div class="form-group col-xs-12 floating-label-form-group controls">
+                <label>Comment</label>
+                <input type="text" class="form-control" placeholder="Please provide a reason for the low rating" name = "comment" required />
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+
+            <input type="hidden" name="username" value="{{poster}}"/>
+            <input type="hidden" name="slug" value="{{slug}}"/>
+
+            <br>
+            <div class="row">
+              <div class="form-group col-xs-12">
+                  <button type="submit" class="btn btn-default">Submit</button>
+              </div>
+            </div>
+          </form>
+        {{/if}}
       {{/if}}
     </div>
   </div>
