admin can now resolve disputes due to low rating on finished priject

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -45,7 +45,7 @@
           <li><a href="/#about-section">About</a></li>
 
           {{#if admin}}
-          <li>  <a href="/users">Users
+          <li>  <a href="/tools">Tools
                   {{#if numOfPendingUsers}}
                     <span class="new badge blue-grey lighten-2">{{numOfPendingUsers}}</span>
                   {{/if}}
