--- a/views/tools/users/single/index.handlebars
+++ b/views/tools/users/single/index.handlebars
@@ -15,7 +15,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-      <form name="edit-user" method="POST" action="/users/{{user.username}}?_method=PUT">
+      <form name="edit-user" method="POST" action="/tools/user/{{user.username}}?_method=PUT">
         
         <div class="row control-group">
           <div class="form-group col-xs-12 floating-label-form-group controls">
