changed admins home page and tools

--- a/views/posts/single/index.handlebars
+++ b/views/posts/single/index.handlebars
@@ -40,7 +40,7 @@
           {{#if expired}}
             {{#if CustomerReviewPending}}
               <div class="review-developer">
-                <a class="btn btn-default" href="/posts/{{user.username}}/{{post.slug}}/reviewWinner/{{user.username}}/review">Review Developer </a>
+                <a class="btn btn-default" href="/posts/{{user.username}}/{{post.slug}}/reviewWinner/{{winnersName}}/review">Review Developer </a>
               </div>
             {{else}}
               {{#if workOrderCreated}}
