--- a/views/tools/index.handlebars
+++ b/views/tools/index.handlebars
@@ -36,11 +36,11 @@
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 
         <div class="input-field">
-          <input id="myInput" onkeyup="myFunction()" type="search" placeholder="Search for users..">
+          <input id="myInput1" onkeyup="myFunction1()" type="search" placeholder="Search for users..">
           <label class="label-icon" for="search"><i class="material-icons">search</i></label>
         </div>
         
-        <ul id="myUL">
+        <ul id="myUL1">
         {{#each allPendingUsers}}
           <li>
             <a href="/tools/user/{{this.username}}">
@@ -92,18 +92,46 @@
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 
         <div class="input-field">
-          <input id="myInput" onkeyup="myFunction()" type="search" placeholder="Search for users..">
+          <input id="myInput2" onkeyup="myFunction2()" type="search" placeholder="Search for users..">
           <label class="label-icon" for="search"><i class="material-icons">search</i></label>
         </div>
         
-        <ul id="myUL">
+        <ul id="myUL2">
         {{#each badReviewdWorkOrder}}
           <li>
             <a href="/tools/workOrder/{{this.id}}">
                 <h7 class="col s4">{{this.post.title}}</h7>
-                <h7 class="col s4" style="color:black;">{{this.accountType}}</h7>
-                <span class="new badge deep-orange lighten-1" data-badge-caption="&nbsp;Attention Needed &nbsp"></span>
+                <span class="new badge red accent-4" data-badge-caption="&nbsp;Attention Needed &nbsp"></span>
                 <span class="new badge black" data-badge-caption="&nbsp;${{this.price}} &nbsp"></span>
+            </a>
+          </li>
+        {{/each}}
+        
+        
+        {{#each ProjectCompleteWorkOrder}}
+          <li>
+            <a href="/tools/workOrder/{{this.id}}">
+                <h7 class="col s4">{{this.post.title}}</h7>
+                <span class="new badge green lighten-1" data-badge-caption="&nbsp;Work Submited &nbsp"></span>
+                <span class="new badge deep-orange lighten-1" data-badge-caption="&nbsp;Customer Review Pending &nbsp"></span>
+            </a>
+          </li>
+        {{/each}}
+
+        {{#each ProjectNotCompleteWorkOrder}}
+          <li>
+            <a href="/tools/workOrder/{{this.id}}">
+                <h7 class="col s4">{{this.post.title}}</h7>
+                <span class="new badge deep-orange lighten-1" data-badge-caption="&nbsp;Work Order Created &nbsp"></span>
+            </a>
+          </li>
+        {{/each}}
+
+        {{#each closedWorkOrder}}
+          <li>
+            <a href="/tools/workOrder/{{this.id}}">
+                <h7 class="col s4">{{this.post.title}}</h7>
+                <span class="new badge blue-grey lighten-2" data-badge-caption="&nbsp;Closed &nbsp"></span>
             </a>
           </li>
         {{/each}}
@@ -116,11 +144,28 @@
 
 
 <script>
-function myFunction() {
+function myFunction1() {
     var input, filter, ul, li, a, i;
-    input = document.getElementById("myInput");
+    input = document.getElementById("myInput1");
     filter = input.value.toUpperCase();
-    ul = document.getElementById("myUL");
+    ul = document.getElementById("myUL1");
+    li = ul.getElementsByTagName("li");
+    for (i = 0; i < li.length; i++) {
+        a = li[i].getElementsByTagName("a")[0];
+        if (a.innerHTML.toUpperCase().indexOf(filter) > -1) {
+            li[i].style.display = "";
+        } else {
+            li[i].style.display = "none";
+
+        }
+    }
+}
+
+function myFunction2() {
+    var input, filter, ul, li, a, i;
+    input = document.getElementById("myInput2");
+    filter = input.value.toUpperCase();
+    ul = document.getElementById("myUL2");
     li = ul.getElementsByTagName("li");
     for (i = 0; i < li.length; i++) {
         a = li[i].getElementsByTagName("a")[0];
