--- a/views/tools/index.handlebars
+++ b/views/tools/index.handlebars
@@ -92,7 +92,7 @@
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 
         <div class="input-field">
-          <input id="myInput2" onkeyup="myFunction2()" type="search" placeholder="Search for users..">
+          <input id="myInput2" onkeyup="myFunction2()" type="search" placeholder="Search for work orders..">
           <label class="label-icon" for="search"><i class="material-icons">search</i></label>
         </div>
         
