--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -1,98 +1,103 @@
-    <div id="home-section" class="col s12 center-align"></br></br><i class="material-icons large">data_usage</i>
-      <p>This is WeDev. </br></br>weDev is where clients and developers come to connect.
-    </br>weDev an internet marketplace comes to make system solutions better and efficient.
-    </br>Join millions of business clients and software developers now.</br></p>
+
+
+<div id="home-section" class="col s12 center-align"></br></br><i class="material-icons large">data_usage</i>
+ <p>This is WeDev. </br></br>weDev is where clients and developers come to connect.
+ </br>weDev an internet marketplace comes to make system solutions better and efficient.
+ </br>Join millions of business clients and software developers now.</br></p>
+</div>
     <!--modal button-->
-    <div class="container">
-      <div class="row">
-        <div class="col s12 m12 l12 center-align">
-          <button class="btn red darken-3 waves-effect waves-light modal-trigger" data-target="modal1">Get Started</button>
-        </div>
-      </div>
+<div class="container">
+  <div class="row">
+    <div class="col s12 m12 l12 center-align">
+      <button class="btn red darken-3 waves-effect waves-light modal-trigger" data-target="modal1">Get Started</button>
     </div>
-
-    <!--Modal popup-->
-    <div class="modal modal-fixed-footer" id="modal1">
-      <div class="modal-content">
-        <h4>Sign Up</h4>
-          <div class="row">
-              <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <form id="signUp" name="sign-up" action="/sign-up" method="post" class="col s12">
-                  <div class="row">
-                      <div class="row">
-                        <div class="input-field col s12">
-                          <input name="username" id="username" type="text" class="validate" required="" aria-required="true">
-                          <label for="username" data-error="wrong" data-success="right">Username</label>
-                        </div>
-                  <div class="row">
-                      <p>
-                        <input name="accountType" type="radio" id="Customer" value="Customer" required="" />
-                        <label for="Customer" data-error="wrong" data-success="right">Customer</label>
-                        <input name="accountType" type="radio" id="Developer" value="Developer" />
-                        <label for="Developer" data-error="wrong" data-success="right">Developer</label>
-                      </p>
-                  </div>
-                </div>
-                      <div class="row">
-                        <div class="input-field col s12">
-                          <input name ="email" id="email" type="email" class="validate" required="" aria-required="true">
-                          <label for="email" data-error="wrong" data-success="right">Email</label>
-                        </div>
-                      </div>
-                      <div class="row">
-                        <div class="input-field col s12">
-                          <input name ="password" id="password" type="password" value="password" required="">
-                          <label for="password" data-error="wrong" data-success="right">Password</label>
-                        </div>
-                      </div>
-                  </div>
-                  </form>
-              </div>
-          </div>
-      </div>
-
-      <div class="modal-footer">
-        <button  type="submit" form="signUp" class="btn btn-flat modal-action modal-close">Register</button>
-        </div>
-      </div>
-
-    <h5>Browse<i class="material-icons">whatshot</i></h5>
-    <form>
-      <div class="input-field">
-        <input id="search" type="search">
-        <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-        <i class="material-icons">close</i>
-      </div>
-    </form>
-          
-<div class="topUsers">
-    <h5>TOP DEVELOPERS<i class="material-icons">verified_user</i>:</h5>
-    <div class="row">
-      {{#each topDevelopers}}
-        <div class="col s4">
-          <a href="/profile/{{this.username}}">
-            <p><font color="black">{{this.username}}</p></font>
-            <img src="/profile_pics/{{this.profile.profileImage}}" class="circle responsive-img z-depth-5 hoverable" alt="" style="width:100px">
-            <p><font color="black">{{this.profile.firstName}}</font></p>
-          </a>
-        </div>
-      {{/each}}
-    </div>
-
-    <h5>TOP CLIENTS<i class="material-icons">wc</i>:</h5>
-    <div class="row">
-       {{#each topCustomers}}
-        <div class="col s4">
-          <a href="/profile/{{this.username}}">
-            <p><font color="black">{{this.username}}</p></font>
-            <img src="/profile_pics/{{this.profile.profileImage}}" class="circle responsive-img z-depth-5 hoverable" alt="" style="width:100px">
-            <p><font color="black">{{this.profile.firstName}}</font></p>
-          </a>
-        </div>
-      {{/each}}
-      </div>
   </div>
 </div>
+
+<!--Modal popup-->
+<div class="modal modal-fixed-footer" id="modal1">
+  <div class="modal-content">
+    <h4>Sign Up</h4>
+      <div class="row">
+          <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+            <form id="signUp" name="sign-up" action="/sign-up" method="post" class="col s12">
+              <div class="row">
+                  <div class="row">
+                    <div class="input-field col s12">
+                      <input name="username" id="username" type="text" class="validate" required="" aria-required="true">
+                      <label for="username" data-error="wrong" data-success="right">Username</label>
+                    </div>
+              <div class="row">
+                  <p>
+                    <input name="accountType" type="radio" id="Customer" value="Customer" required="" />
+                    <label for="Customer" data-error="wrong" data-success="right">Customer</label>
+                    <input name="accountType" type="radio" id="Developer" value="Developer" />
+                    <label for="Developer" data-error="wrong" data-success="right">Developer</label>
+                  </p>
+              </div>
+            </div>
+                  <div class="row">
+                    <div class="input-field col s12">
+                      <input name ="email" id="email" type="email" class="validate" required="" aria-required="true">
+                      <label for="email" data-error="wrong" data-success="right">Email</label>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="input-field col s12">
+                      <input name ="password" id="password" type="password" value="password" required="">
+                      <label for="password" data-error="wrong" data-success="right">Password</label>
+                    </div>
+                  </div>
+              </div>
+              </form>
+          </div>
+      </div>
+  </div>
+
+  <div class="modal-footer">
+    <button  type="submit" form="signUp" class="btn btn-flat modal-action modal-close">Register</button>
+  </div>
+</div>
+
+<div class ="center-align">
+  <h5>Browse<i class="material-icons">whatshot</i></h5>
+  <form>
+    <div class="input-field">
+      <input id="search" type="search">
+      <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+      <i class="material-icons">close</i>
+    </div>
+  </form>
+            
+  <div class="topUsers container">
+      <h5>TOP DEVELOPERS<i class="material-icons">verified_user</i>:</h5>
+      <div class="row">
+        {{#each topDevelopers}}
+          <div class="col s4">
+            <a href="/profile/{{this.username}}">
+              <p><font color="black">{{this.username}}</p></font>
+              <img src="/profile_pics/{{this.profile.profileImage}}" class="circle responsive-img z-depth-5 hoverable" alt="" style="width:100px">
+              <p><font color="black">{{this.profile.firstName}}</font></p>
+            </a>
+          </div>
+        {{/each}}
+      </div>
+
+      <h5>TOP CLIENTS<i class="material-icons">wc</i>:</h5>
+      <div class="row">
+         {{#each topCustomers}}
+          <div class="col s4">
+            <a href="/profile/{{this.username}}">
+              <p><font color="black">{{this.username}}</p></font>
+              <img src="/profile_pics/{{this.profile.profileImage}}" class="circle responsive-img z-depth-5 hoverable" alt="" style="width:100px">
+              <p><font color="black">{{this.profile.firstName}}</font></p>
+            </a>
+          </div>
+        {{/each}}
+        </div>
+    </div>
+  </div>
+<div>
 
     <div id="about-section" class="col s6"><h4>About</h4><p><strong>As a developer,</strong> you can browse through listings posted by renowned business clients to build and implement required systems on a bidding timeline, earn quick money freelancing, at the right comfort of your own home. Payments are safe, secure and guaranteed automatic once files have been submitted.
 
@@ -108,10 +113,10 @@ var ctx = document.getElementById("myChart").getContext('2d');
 var myChart = new Chart(ctx, {
     type: 'bar',
     data: {
-        labels: ["Total Users", "Renowned Clients", "Professional Developers", "Most Projects", "Top Earning Developer"],
+        labels: ["Total Users", "Renowned Clients", "Professional Developers", "Projects", "Top Earning Developer"],
         datasets: [{
             label: 'weDev',
-            data: [{{totalUsers}}, {{renownedCustomers}}, {{professionalDevelopers}}, 5, 10],
+            data: [{{totalUsers}}, {{renownedCustomers}}, {{professionalDevelopers}}, {{numOfProjects}}, 10],
             backgroundColor: [
                 'rgba(255, 99, 132, 0.2)',
                 'rgba(54, 162, 235, 0.2)',
