--- a/views/posts/index.handlebars
+++ b/views/posts/index.handlebars
@@ -15,7 +15,7 @@
   <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
         <div class="input-field">
-          <input id="myInput" onkeyup="myFunction()" type="search" placeholder="Browse">
+          <input id="myInput" onkeyup="myFunction()" type="search" placeholder="            Browse">
           <label class="label-icon" for="search"><i class="material-icons">search</i></label>
         </div>
 
@@ -34,7 +34,7 @@
 {{!--           <a href="#!" class="collection-item hoverable">Post 1</li> --}}
           <li class="collection-item">
             <span class="title"><h5><a class="indigo-text" href="/posts/{{this.user.username}}/{{this.slug}}/">{{this.title}}</h5></span>
-            <p class="black-text">Posted by <a href="/users/{{this.user.username}}/">{{this.user.username}}</a></p>
+            <p class="black-text">Posted by <a href="/profile/{{this.user.username}}/">{{this.user.username}}</a></p>
           </li>
         </ul>
 
