--- a/views/tools/index.handlebars
+++ b/views/tools/index.handlebars
@@ -101,7 +101,7 @@
           <li>
             <a href="/tools/workOrder/{{this.id}}">
                 <h7 class="col s4">{{this.post.title}}</h7>
-                <span class="new badge red accent-4" data-badge-caption="&nbsp;Attention Needed &nbsp"></span>
+                <span class="new badge red accent-4" data-badge-caption="&nbsp&nbsp&nbsp;Attention Needed &nbsp&nbsp&nbsp"></span>
                 <span class="new badge black" data-badge-caption="&nbsp;${{this.price}} &nbsp"></span>
             </a>
           </li>
@@ -112,7 +112,7 @@
           <li>
             <a href="/tools/workOrder/{{this.id}}">
                 <h7 class="col s4">{{this.post.title}}</h7>
-                <span class="new badge green lighten-1" data-badge-caption="&nbsp;Work Submited &nbsp"></span>
+                <span class="new badge green lighten-1" data-badge-caption="&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp;Work Submited &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp"></span>
                 <span class="new badge deep-orange lighten-1" data-badge-caption="&nbsp;Customer Review Pending &nbsp"></span>
             </a>
           </li>
