--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -61,6 +61,7 @@
 
 <div class ="center-align">
   <h5>Browse<i class="material-icons">whatshot</i></h5>
+<div class="container">
   <form>
     <div class="input-field">
       <input id="search" type="search">
@@ -68,6 +69,7 @@
       <i class="material-icons">close</i>
     </div>
   </form>
+  </div>
             
   <div class="topUsers container">
       <h5>TOP DEVELOPERS<i class="material-icons">verified_user</i>:</h5>
