Made basic word changes in About section

--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -101,9 +101,9 @@
   </div>
 <div>
 
-    <div id="about-section" class="col s6"><h4>About</h4><p><strong>As a developer,</strong> you can browse through listings posted by renowned business clients to build and implement required systems on a bidding timeline, earn quick money freelancing, at the right comfort of your own home. Payments are safe, secure and guaranteed automatic once files have been submitted.
+    <div id="about-section" class="col s6"><h4>About</h4><p><strong>As a developer,</strong> you can browse through listings posted by renowned business clients to build and implement required systems on a bidding timeline, earn quick money freelancing, right at the comfort of your own home. Payments are safe, secure and guaranteed automatic once files have been submitted.
 
-    </br></br><strong>As a client,</strong> connect and collaborate with the most professional software developers and figure out which is right for your system demands which you can post in our system to receive major exposure to your work. Have your work done for you.
+    </br></br><strong>As a client,</strong> connect and collaborate with the most professional software developers and figure out which one is right for your system demands. You can create posts in our system to receive major exposure to your work. Have your work done for you.
 
   </br></br><strong>Not sure yet?</strong> As a <strong>visitor,</strong> you can use a temporary username and password to browse through system demands, developer profiles, as well as business client profiles.
   </p>
@@ -127,7 +127,7 @@ var myChart = new Chart(ctx, {
                 'rgba(153, 102, 255, 0.2)'
             ],
             borderColor: [
-                'rgba(255,99,132,1)',
+                'rgba(255,99,132,1)'
                 'rgba(54, 162, 235, 1)',
                 'rgba(255, 206, 86, 1)',
                 'rgba(75, 192, 192, 1)',
