--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -127,7 +127,7 @@ var myChart = new Chart(ctx, {
                 'rgba(153, 102, 255, 0.2)'
             ],
             borderColor: [
-                'rgba(255,99,132,1)'
+                'rgba(255,99,132,1)',
                 'rgba(54, 162, 235, 1)',
                 'rgba(255, 206, 86, 1)',
                 'rgba(75, 192, 192, 1)',
