--- a/views/posts/new-bid/index.handlebars
+++ b/views/posts/new-bid/index.handlebars
@@ -18,6 +18,7 @@
               </div>
             </div>
       {{/if}}
+      <br><br><br>
 
 <div class="container">
   <div class="row">
@@ -26,8 +27,8 @@
       <form name="create-post" action="/posts/{{poster}}/{{slug}}/new-bid" method="post">
         <div class="row control-group">
           <div class="form-group col-xs-12 floating-label-form-group controls">
-            <label>Title</label>
-            <input type="number" class="form-control" min="0.01" step="0.01" max="25000000000" value="25.67" name = "price" equired data-validation-required-message="Please enter a value." />
+            <label>Amount</label>
+            <input type="number" class="form-control" min="0.01" step="0.01" max="{{totalMoney}}" value="50.00" name = "price" equired data-validation-required-message="Please enter a value." />
             <input type="hidden" name="username" value="{{poster}}"/>
             <input type="hidden" name="slug" value="{{slug}}"/>
             <p class="help-block text-danger"></p>
