--- a/views/posts/review/index.handlebars
+++ b/views/posts/review/index.handlebars
@@ -13,32 +13,31 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+    <center>
 
       <div class="input-field">
-        <input id="myInput" onkeyup="myFunction()" type="search" placeholder="Search for users..">
+        <input id="myInputWO" onkeyup="myFunctionWO()" type="search" placeholder="Search for users..">
         <label class="label-icon" for="search"><i class="material-icons">search</i></label>
       </div>
       
+    <div class="offset-s2 col s8">
 
-      <ul id="myUL">  
+      <ul id="myULWO">  
       {{#each bids}}
-        <li>
-          <input type="button" name="theButton" value="Detail" onclick="myButton('{{this.user.username}}');">
-              <h7 class="col s4">{{this.user.username}}</h7>
-              <span class="new badge red" data-badge-caption="&nbsp;{{this.price}} &nbsp"></span>
-
-          </a>
-        </li>
+      <li class="collection">
+        <a class="collection-item">
+          <h4 class="col s8">{{this.user.username}}</h4>
+          <h4 class="col s2">
+          <input type="button"style="height:50px;width:200px" name="theButton" class="btn btn-default" value="${{this.price}}" onclick="myButton('{{this.user.username}}');">
+          </h4>
+        </a>
+      </li>
       {{/each}}
       </ul>
 
-      <ul class="pager">
-        <li class="next">
-            <a href="#">Next &rarr;</a>
-        </li>
-      </ul>
+
     </div>
+    </center>
   </div>
 </div>
 <script>
@@ -50,11 +49,11 @@ function myButton(winningUser)
 
 
 
-function myFunction() {
+function myFunctionWO() {
     var input, filter, ul, li, a, i;
-    input = document.getElementById("myInput");
+    input = document.getElementById("myInputWO");
     filter = input.value.toUpperCase();
-    ul = document.getElementById("myUL");
+    ul = document.getElementById("myULWO");
     li = ul.getElementsByTagName("li");
     for (i = 0; i < li.length; i++) {
         a = li[i].getElementsByTagName("a")[0];
@@ -67,35 +66,4 @@ function myFunction() {
     }
 }
 
-function sortList() {
-  var list, i, switching, b, shouldSwitch;
-  list = document.getElementById("myUL");
-  switching = true;
-  /* Make a loop that will continue until
-  no switching has been done: */
-  while (switching) {
-    // Start by saying: no switching is done:
-    switching = false;
-    b = list.getElementsByTagName("LI");
-    // Loop through all list items:
-    for (i = 0; i < (b.length - 1); i++) {
-      // Start by saying there should be no switching:
-      shouldSwitch = false;
-      /* Check if the next item should
-      switch place with the current item: */
-      if (b[i].innerHTML.toLowerCase() > b[i + 1].innerHTML.toLowerCase()) {
-        /* If next item is alphabetically lower than current item,
-        mark as a switch and break the loop: */
-        shouldSwitch= true;
-        break;
-      }
-    }
-    if (shouldSwitch) {
-      /* If a switch has been marked, make the switch
-      and mark the switch as done: */
-      b[i].parentNode.insertBefore(b[i + 1], b[i]);
-      switching = true;
-    }
-  }
-}
 </script>
