--- a/views/tools/index.handlebars
+++ b/views/tools/index.handlebars
@@ -53,10 +53,10 @@
           <label class="label-icon" for="search"><i class="material-icons">search</i></label>
         </div>
         
-        <ul id="myUL1">
+        <ul id="myUL1" class="collection">
         {{#each allPendingUsers}}
           <li>
-            <a href="/tools/user/{{this.username}}">
+            <a class="collection-item" href="/tools/user/{{this.username}}">
                 <h7 class="col s4">{{this.username}}</h7>
                 <h7 class="col s4" style="color:black;">{{this.accountType}}</h7>
                 <span class="new badge deep-orange lighten-1" data-badge-caption="&nbsp;Pending &nbsp"></span>
@@ -66,7 +66,7 @@
         {{/each}}
         {{#each allApprovedUsers}}
           <li>
-            <a href="/tools/user/{{this.username}}">
+            <a class="collection-item" href="/tools/user/{{this.username}}">
                 <h7 class="col s4">{{this.username}}</h7>
                 <h7 class="col s4" style="color:black;">{{this.accountType}}</h7>
                  <span class="new badge green" data-badge-caption="Approved"></span>
@@ -75,7 +75,7 @@
         {{/each}}
         {{#each allBlockedUsers}}
           <li>
-            <a href="/tools/user/{{this.username}}">
+            <a class="collection-item" href="/tools/user/{{this.username}}">
                 <h7 class="col s4">{{this.username}}</h7>
                 <h7 class="col s4" style="color:black;">{{this.accountType}}</h7>
                  <span class="new badge red accent-4" data-badge-caption="&nbsp;Blocked  &nbsp"></span>
@@ -109,7 +109,7 @@
           <label class="label-icon" for="search"><i class="material-icons">search</i></label>
         </div>
         
-        <ul id="myUL2">
+        <ul id="myUL2" class="collection">
         {{#each badReviewdWorkOrder}}
           <li>
             <a href="/tools/workOrder/{{this.id}}">
